deploy/bases/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # magento-web, cron, install, consumer, db-backup -> db:3306
  - from:
    - podSelector:
        matchLabels:
          app: magento
          component: web
    - podSelector:
        matchLabels:
          app: magento
          component: cron
    - podSelector:
        matchLabels:
          app: magento
          component: install
    - podSelector:
        matchLabels:
          app: magento
          component: consumer
    - podSelector:
        matchLabels:
          app: backup
          component: db
    ports:
    - protocol: TCP
      port: 3306
  egress:
  # DNS resolution via kube-dns
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
